# example-streamlit

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  test_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
example/api/: nyc_tlc_trips.py  test_nyc_tlc_trips.py
example/infrastructure/: big_query.py  test_big_query.py
example/repositories/: ny_tlc_trips_repository.py
example/service/: nyc_tlc_trips.py  test_nyc_tlc_trips.py
example/services/: navigation_tree_service.py  ny_tlc_trips_service.py  nyc_tlc_trips.py
example/ui/: home.py  login.py  page1.py  page2.py  page3.py  page4.py  test_page1.py  test_page3.py
example/ui/components/: authentication.py  authenticator.py  date_range_picker.py  export_buttons.py  payment_type_selector.py  test_date_range_picker.py  test_payment_type_selector.py
example/ui/pages/: antd_tree_component_page.py  antd_tree_navigation_page.py  breadcrumbs_navigation_page.py  home.py  home_page.py  login.py  ny_tlc_trips_avg_speed_page.py  ny_tlc_trips_count_page.py  ny_tlc_trips_page.py  ny_tlc_trips_totals_page.py  nyt_tlc_trips.py  page2.py  page3.py  page4.py  test_home.py  test_login.py  test_page3.py
example/utils/: authentication.py  dataframe_exporter.py  serde.py  url_serde.py
tests/: test_app.py
tests/example/infrastructure/: test_big_query.py
tests/example/repositories/: test_ny_tlc_trips_repository.py
tests/example/services/: test_ny_tlc_trips_service.py  test_nyc_tlc_trips.py
tests/example/ui/components/: test_date_range_picker.py  test_export_buttons.py  test_payment_type_selector.py
tests/example/ui/pages/: test_antd_tree_component_page.py  test_antd_tree_navigation_page.py  test_home.py  test_home_page.py  test_login.py  test_login_page.py  test_ny_tlc_trips.py  test_ny_tlc_trips_avg_speed_page.py  test_ny_tlc_trips_count_page.py  test_ny_tlc_trips_totals_page.py  test_nyt_tlc_trips.py  test_page3.py
tests/example/utils/: test_dataframe_exporter.py  test_serde.py  test_url_serde.py
