[project]
name = "example-streamlit"
description = "Non-trivial Streamlit application skeleton implemented in a 'Streamlit way'"
version = "1.0.0"
requires-python = "~=3.12"

dependencies = [
    "streamlit==1.39.0",
    # bigquery integration
    "google-cloud-bigquery==3.25.0",
    "db-dtypes==1.3.1",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.3",
    # linter and formatter
    "ruff==0.7.4",
    # speedup source code monitoring and live reloading
    "watchdog==2.1.6",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
