[project]
name = "example-streamlit"
description = "Non-trivial Streamlit application skeleton implemented in a 'Streamlit way'"
version = "1.0.0"
requires-python = "~=3.12"

dependencies = [
    "streamlit==1.43.2",
    # bigquery integration
    "google-cloud-bigquery==3.30.0",
    "db-dtypes==1.4.2",
    # export to excel
    "xlsxwriter==3.2.2",
    "openpyxl==3.1.5",
]

[tool.uv]
dev-dependencies = [
    # tests with code coverage
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    # linter and formatter
    "ruff==0.11.2",
    # speedup source code monitoring and live reloading
    "watchdog==6.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "--cov=example --cov-branch"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "ANN", # flake8-annotations
    "ARG", # flake8-argument-names    
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "TCH", # flake8-type-checking
    "PYI", # flake8-pyi
    "Q", # flake8-quotes    
    "UP", # pyupgrade
    "N", # pep8-naming
]
per-file-ignores = { "tests/*.py" = ["ANN001", "ANN201", "ANN202"] }
